# co2-mini

./: .gitignore  README.md  package.json  pyproject.toml
co2_mini/: sensor.py
munin/: co2mini_co2  co2mini_temp
scripts/: format-imports.sh  format.sh  lint.sh
