[tool.poetry]
name = "co2-mini"
version = "0.1.0"
description = ""
authors = ["Kazuki Hashimoto <eru.tndl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hidapi = "^0.12.0"
CO2meter = "^0.2.6"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
mypy = "^0.971"
pyproject-flake8 = "^0.0.1-alpha.4"

[tool.poetry.scripts]
sensor = "co2_mini.sensor:main"

[tool.black]
target = ["py310"]
line-length = 120
exclude = '''
(
    .git
    | __pycache__
    | __init__.py
    | .mypy_cache
    | .poetry
    | node_modules
    | scripts
)
'''

[tool.flake8]
min_python_version = 3.10
max-line-length = 120
exclude = ".git, __pycache__, __init__.py, .mypy_cache, .poetry, node_modules, scripts"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = 3.10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
