[tool.poetry]
name = "co2-mini"
version = "0.1.0"
description = ""
authors = ["Kazuki Hashimoto <eru.tndl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
hidapi = "^0.14.0"
CO2meter = "^0.2.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.3"

[tool.poetry.scripts]
sensor = "co2_mini.sensor:main"


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = 3.11

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
